# ComfyUI-Compositing-Nodes-Pack

./: DEV.md  README.md  __init__.py  nai.py  pyproject.toml
js/: GetText.js
nodes/: get_text_node.py  image_apply_color_palette_node.py  image_brightness_node.py  image_concat_node.py  image_contrast_node.py  image_desaturate_node.py  image_difference_node.py  image_extend_node.py  image_flip_node.py  image_load_node.py  math_operation_node.py  note_extended_node.py
py/: image_brightness_node.py  image_contrast_node.py  image_flip_node.py  image_greyscale_node.py  image_rgb.py  image_rotate_node.py  set_text_node.py
workflows/: Image Brightness Contrast.json
