[project]
name = "comfyui-nai-production-nodes-pack"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["pillow>=10.3.0", "scipy", "color-matcher", "matplotlib", "huggingface_hub", "mss", "opencv-python"]

[project.urls]
Repository = "https://github.com/KoreTeknology/ComfyUI-Nai-Production-Nodes-Pack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Nai-Production-Nodes-Pack"
Icon = ""
